<resources>
    <string name="app_name">Quản lý chi tiêu nhóm</string>
    <string name="title_activity_them_giao_dich">Thêm giao dịch</string>
    <string name="title_activity_lich_su_gd">Lịch sử nạp tiền</string>
    <string name="title_activity_thong_ke_gd">Thống kê giao dịch</string>
    <string name="title_activity_time_option">Chọn ngày</string>
    <!--thanh-->
    <string name="enter_fromdate">Từ ngày</string>
    <string name="enter_todate">Đến ngày</string>
    <string name="han_muc">Hạn mức chi tiêu</string>
    <string name="tong_chi">Tổng tiền chi</string>
    <string name="con_lai">Còn lại</string>
    <!--Thai add-->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="money_total">1,854,000 đ</string>
    <string name="sync">Bấm để đồng bộ</string>
    <string name="notification_btn">TODO</string>
    <string name="user">user</string>
    <string name="remove">Xóa</string>
    <string name="cancel">Hủy</string>

    <!--TEST-->
    <string name="country_prompt">Choose a country</string>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

</resources>
