<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ln_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/han_muc"
            android:textColor="@color/mauden"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvHanMucCT"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/textView1"
            android:gravity="right"
            android:layout_weight="1"
            android:text="5000"
            android:ems="10"
            android:focusable="true"
            android:inputType="date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/tong_chi"
            android:textColor="@color/mauden"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvTongTienChi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/textView2"
            android:gravity="right"
            android:layout_weight="1"
            android:text="5000"
            android:ems="10"
            android:focusable="true"
            android:inputType="date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/con_lai"
            android:textColor="@color/mauden"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvConLai"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/textView3"
            android:gravity="right"
            android:layout_weight="1"
            android:text="5000"
            android:ems="10"
            android:focusable="true"
            android:inputType="date" />

    </LinearLayout>
</LinearLayout>